--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.0",
     "http": "0.0.0",
     "jade": "^1.11.0",
+    "minimist": "^1.2.0",
     "multer": "^1.1.0",
     "q": "^1.4.1",
     "sqlite3": "^3.1.4",
