--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "http": "0.0.0",
+    "install": "^0.8.1",
     "jade": "^1.11.0",
     "minimist": "^1.2.0",
     "multer": "^1.1.0",
+    "npm": "^3.10.6",
     "q": "^1.4.1",
     "sqlite3": "^3.1.4",
     "squel": "^5.3.3"
