--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "fs-extra": "^0.30.0",
     "http": "0.0.0",
     "install": "^0.8.1",
     "jade": "^1.11.0",
